tests/ui/parser/attr-bad-meta.rs
#[path*] //~ ERROR expected one of `(`, `::`, `=`, `[`, `]`, or `{`, found `*`
mod m {}

// ferrocene-annotations: fls_gvwd0kf72jt
// Attributes
